Correção de bugs na autenticação do usuario e implementação da rota /Task
