# backend/src/routes.ts
@@ -6,6 +6,7 @@ import {
 } from "./controllers/userController";
 import { createTask } from "./controllers/taskController";
 import { login } from "./controllers/authController";
+import { checkToken } from "./middlewares/authMiddleware";
 
 const router = Router();
 
@@ -14,8 +15,8 @@ router.post("/login", login);
 router.post("/users", createUser);
 router.get("/users/:id", getUserById);
 
-router.get("/userss", getUsers);
+router.get("/users/getUsers", getUsers);
 
-router.post("/tasks", createTask);
+router.post("/tasks", checkToken, createTask);
 
 export default router;
