# backend/src/swagger.json
@@ -16,6 +16,50 @@
     }
   ],
   "paths": {
+    "/login": {
+      "post": {
+        "summary": "cadastro de usuario",
+        "description": "Essa rota realiza a autenticação do usuário",
+        "tags": ["Users"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
+              },
+              "examples": {
+                "user": {
+                  "value": {
+                    "email": "jung.kook@ccc.ufcg.edu.br",
+                    "password": "gabslindo"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Email e senha são obrigatórios!"
+          },
+          "401": {
+            "description": "Credenciais inválidas!"
+          }
+        }
+      }
+    },
     "/users": {
       "post": {
         "summary": "cadastro de usuario",
@@ -55,6 +99,7 @@
         }
       }
     },
+
     "/users/{id}": {
       "get": {
         "description": "busca de um usuario por um id",
@@ -97,32 +142,53 @@
         "summary": "cadastro de task",
         "description": "essa rota cadastra um usuario",
         "tags": ["Tasks"],
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/Task"
+              },
+              "examples": {
+                "task": {
+                  "value": {
+                    "id": "1",
+                    "title": "Aulas de piano",
+                    "description": "Aulas para aprender a tocar um isntrumento chamado piano",
+                    "status": "PENDING",
+                    "userId": "BTS"
+                  }
+                }
               }
             }
           }
         },
         "responses": {
           "201": {
-            "description": "OK",
+            "description": "Tarefa criada com sucesso",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/Task"
                 }
               }
             }
+          },
+          "401": {
+            "description": "Token inválido ou não fornecido"
           }
         }
       }
     }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
     "schemas": {
       "User": {
         "type": "object",
